--- a/template.html
+++ b/template.html
@@ -61,6 +61,42 @@ URL: https://code.google.com/p/io-2012-slides
     </article>
   </slide>
 
+  <!-- BELOW ARE TEMPLATE SLIDES, COPY THEM ABOVE INSTEAD OF MODIFYING THEM -->
+
+  <slide class="logoslide nobackground">
+    <article class="flexbox vcenter">
+      <span><img src="images/google_developers_logo.png"></span>
+    </article>
+  </slide>
+
+  <slide class="title-slide segue nobackground">
+    <aside class="gdbar"><img src="images/google_developers_icon_128.png"></aside>
+    <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
+    <hgroup class="auto-fadein">
+      <h1 data-config-title><!-- populated from slide_config.json --></h1>
+      <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
+      <p data-config-presenter><!-- populated from slide_config.json --></p>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Slide with Bullets</h2>
+    </hgroup>
+    <article>
+      <ul>
+        <li>Titles are formatted as Open Sans with bold applied and font size is set at 45</li>
+        <li>Title capitalization is title case
+          <ul>
+            <li>Subtitle capitalization is title case</li>
+          </ul>
+        </li>
+        <li>Subtitle capitalization is title case</li>
+        <li>Titles and subtitles should never have a period at the end</li>
+      </ul>
+    </article>
+  </slide>
+
   <slide>
     <hgroup>
       <h2>Slide with Bullets that Build</h2>
@@ -394,6 +430,8 @@ function helloWorld(world) {
   </slide>
 
   <slide class="backdrop"></slide>
+
+  <!-- ABOVE ARE TEMPLATE SLIDES, COPY THEM ABOVE INSTEAD OF MODIFYING THEM -->
 
 </slides>
 
