--- a/template.html
+++ b/template.html
@@ -59,25 +59,24 @@ URL: https://code.google.com/p/io-2012-slides
 
   <slide>
     <hgroup>
-      <h2>Slide with Bullets that Build</h2>
-      <h3>Subtitle Placeholder</h3>
+      <h2>Auth Triangle</h2>
+      <h3>Where do we need auth?</h3>
     </hgroup>
     <article>
-      <p>A list where items build:</p>
-      <ul class="build">
-        <li>Pressing 'h' highlights code snippets</li>
-        <li>Pressing 'p' toggles speaker notes (if they're on the current slide)</li>
-        <li>Pressing 'f' toggles fullscreen viewing</li>
-        <li>Pressing 'w' toggles widescreen</li>
-        <li>Pressing 'o' toggles overview mode</li>
-        <li>Pressing 'ESC' toggles off these goodies</li>
-      </ul>
-      <p>Another list, but items fade as they build:</p>
-      <ul class="build fade">
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
-        <li>Hover over me!</li>
-      </ul>
+      <div class="build">
+        <div style="">
+          Client
+          <img src="https://developers.google.com/+/images/hero1.jpg" width="200px">
+        </div>
+        <div style="float: right;">
+          Google
+          <img src="https://developers.google.com/+/images/hero1.jpg" width="300px">
+        </div>
+        <div style="padding-top: 100px;">
+          Server
+          <img src="https://developers.google.com/+/images/hero1.jpg" width="200px">
+        </div>
+      </div>
     </article>
   </slide>
 
